# behExperiment1

./: .claudeignore  .gitignore  CLAUDE.md  PLAN.md  README.md  skills-lock.json  summary.md  summary2.md
docs/: combined-gui-requirements.md  configure.md  firmware-architecture.md  gui-usage.md
docs/prototype1/: configure.md  experimentStimControl-configure.md  grid-configure.md  grid-gui-usage.md  participant-management-proposal.md  summary.md
docs/prototype2/: prototype2-subjectExperiment-gui-requirements.md  requirements2.md  requirementsREP.md  statusREP.md  subjectExperiment-gui-guide.md
prototype/combined_gui/: main.py  main_window.py  participants.py  protocol.py  pyproject.toml
prototype/grid_gui/: main.py  main_window.py  protocol.py  pyproject.toml
prototype/gui/: main.py  main_window.py  participants.py  protocol.py  pyproject.toml  serial_link.py
prototype2/GUI/configurableFirmware/: behavioral_view.py  config_io.py  grid_view.py  linear_view.py  main.py  main_window.py  param_form.py  protocol.py  pyproject.toml  solid_view.py  test_offscreen.py
prototype2/GUIsubjectExp/: main.py  main_window.py  participants.py  protocol.py  pyproject.toml  serial_link.py  test_offscreen.py
startingPoint/: experiment.md  grid.md
startingPoint/GUImetamers/: Form1.Designer.cs  Form1.cs  Form3_Constant.Designer.cs  Form3_Constant.cs  GUImetamers.csproj  GUImetamers.sln  Program.cs  SerialCommunication.cs  screen2.Designer.cs  screen3LinBeh.Designer.cs  screen3LinBeh.cs  screen3RandBeh.Designer.cs  screen3RandBeh.cs  secreen2.cs
(+103 files in other folders)
