[project]
name = "configurable-firmware-gui"
version = "0.1.0"
description = "GUI for the configurableFirmware rapid experiment prototyping tool (prototype 2)."
requires-python = ">=3.12"
dependencies = [
    "pyqtgraph>=0.14.0",
    "pyserial>=3.5",
    "pyside6>=6.11.1",
]

[project.scripts]
configurable-firmware-gui = "main:main"
